# ros-image-stream-encoder

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
config/: config.yaml
include/: ffmpeg_nvmpi_wrapper.hpp  ffmpeg_wrapper.hpp  image_stream_encoder.hpp  nv_av_conversion.h  stream_encoder_nodelet.hpp  temp.cpp
launch/: example.launch  node.launch  nodelet.launch
lib/nvmpi/: CMakeLists.txt
src/: image_stream_encoder.cpp  stream_encoder_nodelet.cpp
