<?xml version="1.0"?>
<package format="2">
  <name>image_stream_encoder</name>
  <version>0.0.0</version>
  <description>image-stream-2-mp4</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sebastianschroder@hotmail.com">dml</maintainer>
  <license>TBD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>cv_bridge</depend>
  



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
